<resources>
    <string name="app_name">SwiftTalk</string>
    <string name="app_desc">Chat instantáneo sin complicaciones. \nRegístrate y comienza a vivir la experiencia. \n ¡Comunícate fácil y sin límites con Swift Talk!</string>
    <string name="get_data">Ingresa tus datos</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="name_hint">Nombre</string>
    <string name="last_name_hint">Apellido</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="logout_button">Cerrar Sesión</string>
    <string name="register_button">Registrate</string>
    <string name="login_error">Error al iniciar sesión</string>
    <string name="register_error">Error al registrarse</string>
    <string name="register_success">Registro exitoso</string>
    <string name="login_success">Inicio de sesión exitoso</string>
    <string name="logout_success">Cierre de sesión exitoso</string>
    <string name="logout_error">Error al cerrar sesión</string>
    <string name="email_error">Correo electrónico inválido</string>
    <string name="password_error">Contraseña inválida</string>
    <string name="password_length_error">La contraseña debe tener al menos 6 caracteres</string>
    <string name="password_match_error">Las contraseñas no coinciden</string>
    <string name="logo">Swift Talk app logo</string>
    <string name="floating_button">Iniciar un chat nuevo</string>
    <string name="user_cover">Imagen de perfil del usuario</string>
    <string name="text_template">Hello World</string>
    <string name="user_name_template">Vladimir Curiel</string>
    <string name="date_template">30/11/2024</string>
    <string name="back_button">Botón de regreso</string>
    <string name="info_button">Botón de información</string>
    <string name="menu_button">Botón de menú</string>
    <string name="image_button">Botón de imagen</string>
    <string name="send_message">Botón de enviar mensaje</string>
    <string name="message_hint">Escribe tu mensaje</string>
    <string name="timestamp_template">3:54 p.m.</string>
</resources>