<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

    <ImageView
        android:id="@+id/userCover"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:contentDescription="@string/user_cover"
        android:src="@drawable/user_cover"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/user_name_template"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/userCover"
            app:layout_constraintTop_toTopOf="@id/userCover"
            app:layout_constraintEnd_toStartOf="@id/timestamp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/lastMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/text_template"
        android:textColor="@color/gray"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/userCover"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintEnd_toStartOf="@id/timestamp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_template"
        android:textAlignment="textEnd"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>