<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="26dp"
        android:layout_height="29dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/userCover"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintVertical_bias="0.2"/>

    <ImageView
        android:id="@+id/userCover"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/user_cover"
        android:src="@drawable/user_cover"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/user_name_template"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/userCover"
        app:layout_constraintTop_toTopOf="@id/userCover"
        app:layout_constraintBottom_toBottomOf="@id/userCover"
        app:layout_constraintEnd_toStartOf="@id/menuBtn"
        app:layout_constraintHorizontal_bias="0.0"/>

    <ImageView
        android:id="@+id/menuBtn"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:contentDescription="@string/info_button"
        android:src="@drawable/info_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/userCover"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <View
        android:id="@+id/upper_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/userCover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>