<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/send_image"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.968"/>

    <ImageView
        android:id="@+id/send_image"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:contentDescription="@string/image_button"
        android:src="@drawable/image_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toEndOf="@id/send_image"
        app:layout_constraintEnd_toStartOf="@id/send_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/message_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/message_hint"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_button_gray"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/send_message"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:contentDescription="@string/send_message"
        android:src="@drawable/send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>