<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/my_image_view"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="36dp"/>

    <TextView
        android:layout_width="340dp"
        android:layout_height="85dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/baloo"
        android:text="Ingresa tus datos."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252"
        app:layout_constraintHorizontal_bias="0.486"
        tools:ignore="HardcodedText"/>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:cursorColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:autofillHints="nombre"
                android:hint="@string/name_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:background="@drawable/rounded_button"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="false"
            app:cursorColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_field"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:autofillHints="apellido"
                android:hint="@string/last_name_hint"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:background="@drawable/rounded_button"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="false"
            app:cursorColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:autofillHints="email"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:background="@drawable/rounded_button"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/orange"
            app:hintEnabled="false"
            app:cursorColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:autofillHints="password"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:background="@drawable/rounded_button"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <include
        layout="@layout/fr_register_button"
        android:layout_width="170dp"
        android:layout_height="57dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797"/>
</androidx.constraintlayout.widget.ConstraintLayout>